# air-korea-mcp-py

./: .env.example  AGENTS.md  README.md  pyproject.toml
deploy/systemd/: air-korea-mcp.service.example
scripts/: run_http.sh  run_stdio.sh  setup_linux.sh
src/air_korea_mcp/: __init__.py  bootstrap.py  client.py  constants.py  exceptions.py  gateway.py  location_guidance_data.py  location_index_data.py  location_resolution.py  reference.py  runtime.py  server.py  service.py  settings.py  validation.py
tests/: test_bootstrap.py  test_gateway.py  test_location_resolution.py  test_runtime.py  test_service.py
