[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "air-korea-mcp"
version = "0.1.0"
description = "MCP server for the Air Korea public OpenAPI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp[cli]>=1,<2",
]

[project.scripts]
air-korea-mcp = "air_korea_mcp.server:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
